# Financy

./: .gitignore  AI_TRADING_SYSTEM_CANONICAL_SPECIFICATION_V4.md  CANONICAL_SCHEMA_ADDENDUM_CONTENT_FEATURES.md  CLAUDE_AGENTIC_IMPLEMENTATION_AND_GIT_OPERATING_MODEL.md  RELEASE_0_1A_IMPLEMENTATION_BACKLOG.md  RELEASE_0_TESTING_LOGIC_AND_ARCHITECTURE.md  REQUIREMENT_TO_CODE_COVERAGE_MATRIX.md  pyproject.toml
.github/workflows/: ci.yml
docs/architecture_definition/: AI_TRADING_SYSTEM_ARCHITECTURE_V5_DRAFT.md  ARCHITECTURE_DECISION_REGISTER.md  ARCHITECTURE_RESEARCH_AND_EVIDENCE_REPORT.md  CLAIM_TO_SOURCE_TRACEABILITY.md  DATA_PIT_AND_VALIDATION_APPENDIX.md  DOCUMENT_AUTHORITY_AND_CONFLICT_MATRIX.md  MODEL_AND_METHOD_EVIDENCE_MATRIX.md  OPEN_DECISIONS_ASSUMPTIONS_AND_EXPERIMENTS.md  OWNER_DECISION_PACKETS.md  PHASE_1_EVIDENCE_INTEGRITY_REVIEW.md  RELEASE_0_IMPLEMENTATION_READINESS_GATE.md  REQUIREMENT_TRACEABILITY_RECONCILIATION.md  RESEARCH_PROTOCOL_AND_QUESTION_MAP.md  SOURCE_EVIDENCE_REGISTER.md  TWELVE_DOCUMENT_CONSISTENCY_REVIEW.md  V4_6_TO_V5_CHANGE_PROPOSAL.md
docs/architecture_reassessment/: 00_INDEX_AND_EXECUTIVE_DECISION_MEMO.md  01_INDEPENDENT_PREREAD_QUESTION_INVENTORY.md  02_CURRENT_STATE_RECONSTRUCTION_AND_GAP_ANALYSIS.md  03_RESEARCH_EVIDENCE_MATRIX.md  04_ARCHITECTURE_ALTERNATIVES_AND_DECISION_MATRIX.md  05_RECOMMENDED_TARGET_ARCHITECTURE.md  06_TECHNICAL_MARKET_MACRO_ENGINE.md  07_NEWS_SOCIAL_TELEGRAM_ENGINE.md  08_HISTORICAL_MEMORY_AND_GRAPH.md  09_MODEL_FUSION_AND_AGENTIC_LAYER.md  10_HORIZON_AND_TARGET_SEMANTICS_RESEARCH.md  14_RED_TEAM_FINDINGS.md  (+7 more)
(+25 files in other folders)
