[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "financy"
version = "0.0.0"
description = "Financy Release-0 Edge Probe scaffold (documentation-driven; R0 only)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# src-layout import without an install step; offline, deterministic tests only.
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
